--- a/sobremim.html
+++ b/sobremim.html
@@ -42,7 +42,7 @@
         </section>
         <div class="apresentacao__imagem-container">
             <img class="apresentacao__imagem"
-                src="imagem.png"
+                src="imagemportfolio.jpg"
                 alt="Foto de uma pessoa trabalhando em um notebook">
             <div class="apresentacao__imagem-borda"></div>
         </div>
